Added Menu Class, and configured food-item elements to change their css when added to the MenuArea.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <script src="MenuItem.js"></script>
+  <script src="Menu.js"></script>
   <script src="drag_functions.js"></script>
   <script src="onload.js"></script>
 </head>
@@ -10,14 +11,9 @@
   <div style="width: 100%; display: table;">
     <div style="display: table-row">
 
-      <div id="InitialItems" ondrop="removedrop(event)" ondragover="allowDrop(event)" width="336" height="200">
-        <!-- <p class="food-item" id="drag1" draggable="true" ondragstart="drag(event)" width="336" height="69">Lobster</p>
-        <p class="food-item" id="drag2" draggable="true" ondragstart="drag(event)" width="336" height="69">Mashed Potatoes</p>
-        <p class="food-item" id="drag3" draggable="true" ondragstart="drag(event)" width="336" height="69">Roast Beef</p>
-        <p class="food-item" id="drag4" draggable="true" ondragstart="drag(event)" width="336" height="69">Greek Chicken</p> -->
-      </div>
+      <div id="InitialItems" ondrop="removedrop(event)" ondragover="allowDrop(event)"></div>
 
-      <div id="MenuItems" ondrop="drop(event)" ondragover="allowDrop(event)" width="336" height="69"></div>
+      <div id="MenuArea" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
 
        <button onclick="getItemList()">Get Item List</button>
