Changed the css a little so the elements fit the screen a bit better. Items placed back into the item list will regain their original css.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="onload.js"></script>
 </head>
 <body onload="onload()">
-  <div style="width: 100%; display: table;">
+  <div style="width: 100%; display: table; margin: 0;">
     <div style="display: table-row">
 
       <div id="InitialItems" ondrop="removedrop(event)" ondragover="allowDrop(event)"></div>
